# docs/swagger.json
@@ -1234,7 +1234,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.PostDraft"
+                                            "$ref": "#/definitions/resp.LoadPostDraftResp"
                                         }
                                     }
                                 }
@@ -1506,7 +1506,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.User"
+                                            "$ref": "#/definitions/resp.UserInfoResp"
                                         }
                                     }
                                 }
@@ -2022,64 +2022,6 @@
                     "type": "string"
                 },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.PostDraft": {
-            "type": "object",
-            "properties": {
-                "bid": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "introduce": {
-                    "type": "string"
-                },
-                "showImg": {
-                    "type": "string"
-                },
-                "studentID": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.User": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string"
-                },
-                "collectAct": {
-                    "type": "string"
-                },
-                "collectPost": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "likeAct": {
-                    "type": "string"
-                },
-                "likeComment": {
-                    "type": "string"
-                },
-                "likePost": {
-                    "type": "string"
-                },
-                "school": {
-                    "type": "string"
-                },
-                "studentId": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
@@ -2908,6 +2850,32 @@
                 }
             }
         },
+        "resp.LoadPostDraftResp": {
+            "type": "object",
+            "properties": {
+                "bid": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "introduce": {
+                    "type": "string"
+                },
+                "showImg": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "studentId": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "resp.LoginResp": {
             "type": "object",
             "properties": {
@@ -2996,6 +2964,26 @@
             "type": "object",
             "properties": {
                 "avatar": {
+                    "type": "string"
+                },
+                "studentId": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "resp.UserInfoResp": {
+            "type": "object",
+            "properties": {
+                "Id": {
+                    "type": "integer"
+                },
+                "avatar": {
+                    "type": "string"
+                },
+                "school": {
                     "type": "string"
                 },
                 "studentId": {
